# prompt-engineering-for-rag

./: .gitignore  ROADMAP.md  TABLE_OF_CONTENTS.md
Related Docs/: Architecting Professional RAG System Messages.docx  Architectural Guardrails and Fallback Examples.docx  Architectural Layers of Metadata Enrichment for Contextual Retrieval.docx  Architectural Precision in Contextual Prompt Engineering.docx  Architecture of Reliable RAG Guardrails and Fallback Behaviors.docx  Architecture of Scenario-Based System Instructions.docx  Context Injection Strategies for RAG Architecture.docx  Faithfulness Mandate Examples.docx  Foundations of Prompt Instruction Engineering.docx  Persona Assignment Example.docx  Securing RAG Systems via Instruction Defense Layers.docx  Smart Ordering Strategies for Context Retrieval.docx  Strategic Framework for Metadata Enrichment Implementation.docx  The Architecture of Prompt Engineering for RAG Systems.docx  (+3 more)
article/: 01-foundations.md  02-system-message.md  (+9 more)
prompt-lab/: .env.example  README.md  pyproject.toml  requirements.txt
prompt-lab/src/prompt_lab/: __init__.py  assembler.py  cli.py  client.py  config.py  context.py  intent_router.py  logging_util.py  output_guard.py  runner.py  workspace.py
prompt-lab/src/prompt_lab/gui/: __init__.py  __main__.py  app.py  log_view.py  main_window.py  worker.py
prompt-lab/templates/: config.yaml
prompt-lab/templates/en/: context.yaml  few_shot.md  questions.yaml  reminder.md  system_prompt.md
prompt-lab/templates/fa/: context.yaml  few_shot.md  questions.yaml  reminder.md  system_prompt.md
