[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-lab"
version = "0.1.0"
description = "A CLI lab for testing and iterating on RAG prompts against any OpenAI-compatible provider."
requires-python = ">=3.10"
dependencies = [
    "openai>=1.50",
    "typer>=0.12",
    "rich>=13.7",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "PySide6-Essentials>=6.6",
]

[project.scripts]
prompt-lab = "prompt_lab.cli:app"
prompt-lab-gui = "prompt_lab.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]
